vm option